# Codex-1

./: .env.example  .env.production.example  .gitignore  AGENTS.md  BLUEPRINT_COMPLETE.md  PRD.md  PROJECT_MEMORY.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PROMPT_TEMPLATES.md  README.md  composer.json  package-lock.json  package.json  pyproject.toml  vite.config.js
app/Enums/: OrderTrackingSource.php  OrderTrackingStatus.php  ReturnRequestStatus.php
app/Events/: OrderTrackingUpdated.php
app/Jobs/: ProcessOrderAfterPayment.php  SendEmailJob.php  UpdateCurrencyRatesJob.php
app/Models/: Address.php  Affiliate.php  AffiliateClick.php  AffiliateCommission.php  AffiliatePayout.php  AffiliatePayoutMethod.php  Banner.php  CartItem.php  Category.php  Coupon.php  DropshipOrder.php  Faq.php  LoyaltyPoint.php  LoyaltyTransaction.php  NewsletterSubscriber.php  Order.php  OrderItem.php  OrderTrackingEvent.php  Product.php  ProductAnswer.php  ProductAttribute.php  ProductAttributeValue.php  ProductQuestion.php  ProductVariant.php  ReturnRequest.php  Review.php  ShippingRate.php  ShippingZone.php  SizeGuide.php  StockNotification.php  SupportTicket.php  TicketReply.php  User.php  Vendor.php  Withdrawal.php
app/Notifications/: AffiliateCommissionEarnedNotification.php  AffiliatePayoutApprovedNotification.php  AffiliatePayoutPaidNotification.php  AffiliateTierUpgradeNotification.php  AffiliateWelcomeNotification.php  WelcomeNotification.php  (+14 more)
bootstrap/: app.php
config/: services.php
public/: manifest.webmanifest  offline.html
routes/: console.php  web.php
tests/: test_cli.py
(+217 files in other folders)
